# haskell-nix-template

./: .envrc  .gitignore  default.nix  haskell-nix-template.cabal  project.nix
app/: Main.hs
nix/: sources.json
src/: Main.hs  MyLib.hs
test/: MyLibTest.hs
