cabal-version:       2.4

name:                haskell-nix-template
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              ggzor
maintainer:          30713864+ggzor@users.noreply.github.com
build-type:          Simple

library
  hs-source-dirs:      src
  exposed-modules:     MyLib
  build-depends:       base, microlens
  default-language:    Haskell2010

executable haskell-nix-template
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-nix-template, base
  default-language:    Haskell2010

test-suite haskell-nix-template-test
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
